src/visionlouisville/static/css/styles.css
/* ... */
.author {
  display: block;
  padding: 10px 0;
}
.twitter-handle {
  font-style: normal;
  font-weight: 700;
  color: #808073;
}
.user-link {
  float: left;
  background-color: #48a5bf;
  border: 2px solid #7ec4d8;
  border-left: 0;
  border-radius: 0 20px 20px 0;
  box-shadow: 0 0 5px rgba(0,0,0,0.2);
  margin-left: -50px;
}
.avatar {
  display: block;
  width: 40px;
  height: 40px;
  border-radius: 0 18px 18px 0;
}
.vision-title {
  display: block;
  font-size: medium;
  font-weight: 700;
}
.vision-description {}

.vision-footer {
  margin: 20px -10px -20px -50px;
  background-color: #d5d5c6;
  box-shadow: inset 0 3px 3px rgba(0,0,0,0.15);
}

.category-link,
.retweet-link,
.reply-link {
  float: left;
  padding: 0.5em 1em;
  text-decoration: none;
}
.category-link {
  float: right;
}
.retweet-link,
.reply-link {
  font-weight: 800;
  background: #48a5bf;
  box-shadow: inset 0 20px 20px #7ec4d8;
  text-shadow: 0 1px 1px rgba(255,255,255,0.5);
}
.reply-link {
  border-left: 1px solid #48a5bf;
}

/* Conversation */
.replies-region {}
.reply {
  padding-left: 50px;
}
.replies-region .avatar {
  float: left;
  border-radius: 0;
  margin-left: -50px;
}
.replies-region .datetime {
  padding: 0;
}

/* Vision List */
.vision-list {
}
.vision-list li {
  background: #fff;
  margin-bottom: 10px;
  position: relative;
  box-shadow: 0 0 5px rgba(0,0,0,0.2);
}
.vision-list .user-link {
  margin-top: 5px;
}
.vision-list .vision-title {
  font-weight: 400;
}
.vision-link {
  display: block;
  padding: 0 10px 10px 40px;
  margin-left: -40px;
  text-decoration: none;
}
.vision-list-category-icon {
  float: right;
  color: #b2b2a6;
  padding: 5px 0 10px;
}

/* Support */
.support {
  color: #ef037d;
  font-weight: 600;
}
.heart {
  display: block;
  background-color: #d5d5c6;
  box-shadow: inset 0 0.75em 0.75em rgba(255,255,255,0.5);
  width: 26px;
  height: 21px;
  font-size: 21px;
}
.support-small {
  font-size: 80%;
  line-height: 3;
}
.vision-header a.support {
  display: block;
  width: 46px;
  position: absolute;
  top: 56px;
  left: -10px;
  font-size: large;
  text-align: center;
  text-decoration: none;
}
.vision-header a.support .heart {
  margin-left: 10px;
}
.supported .heart {
  background-color: #ef037d;
}
.support-count {
  font-weight: 800;
}
.heart-inline {
  display: inline-block;
  height: 1.25em;
  width: auto;
  margin-bottom: -0.25em;
  font-size: 1em;
}

/* Vision Form */
.category-icon + img {
  background-color: #b2b2a6;
  cursor: pointer;
}
.category-icon:checked + img {
  background-color: #268099;
}
.vision-category-list {
  float: left;
  width: 100%;
}
.vision-category-list li {
  float: left;
  width: 14%;
  padding: 0;
  margin: 0;
}
.vision-category-list img {
  width: 100%;
  height: auto;
  display: block;
}
.category-prompt {

}
.category-title {
  color: #268099;
}

.reply-form {
  display: none;
}
.reply-text {
  height: 4.5em;
  margin-bottom: 10px;
}
.reply-count {
  font-size: medium;
  font-weight: 800;
  background-color: #a1cbcf;
  float: right;
  margin: -10px 10px 0 0;
  padding: 0.25em 0.5em;
}
.reply-btn {
}

/* Swiper */
.vision-gallery {
  position: relative;
  padding-bottom: 15px;
  margin-bottom: 5px;
}
.swiper-container {
  width: 100%;
  height: auto;
  margin-bottom: 10px;
}
.swiper-slide {
  width: 100%;
/*  height: 100%;*/
  height: auto !important;
  opacity: 0;
  -webkit-transition: opacity 1.2s;
          transition: opacity 1.2s;
}
.swiper-slide-active { }
.swiper-slide-visible { opacity: 1; }
.swiper-pagination-switch {}
.swiper-active-switch {}
.swiper-visible-switch {}

.swiper-slide .vision {
  padding: 0 0 0 40px;
  margin: 5px 10px;
  background: #fff;
  box-shadow: 0 0 5px rgba(0,0,0,0.2);
}
.swiper-slide .user-link {
  margin-top: 5px;
}
.swiper-slide .vision p {
  margin: 0;
}
.pagination {
  position: absolute;
  left: 0;
  text-align: center;
  bottom: 5px;
  width: 100%;
}
.swiper-pagination-switch {
  display: inline-block;
  width: 10px;
  height: 10px;
  border-radius: 10px;
  background: #b2b2a6;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.5);
  margin: 0 3px;
  cursor: pointer;
}
.swiper-active-switch {
  background: #48a5bf;
}


/* =Welcome Message
-------------------------------------------------------------- */

.welcome { 
  margin-top: -20px;
  margin-bottom: 20px;
  padding: 20px 10px 10px 10px; 
  background: #808073;
  color: #e7e7d7;
  text-shadow: 0 1px 1px rgba(0,0,0,0.5);
  box-shadow: 0 1px 1px rgba(255,255,255,0.75);
}
.welcome a { 
  color: #7ec4d8;
}
a.welcome-close-btn {
  float: right;
  width: 1.25em;
  height: 1.25em;
  color: #444;
  text-shadow: none;
  font-size: xx-large;
  text-decoration: none;
  line-height: 1.25em;
  text-align: center;
  margin: -15px -10px 0 0;
}
.welcome-avatar {
  float: left;
  width: 55px;
  height: 55px;
  margin: 5px 10px 20px -65px;
}
.welcome-header {
  padding-left: 65px;
  margin-bottom: 1em;
}
.welcome h1, .welcome h2, .welcome h3, .welcome h4, .welcome h5, .welcome h6 {
  color: #fff;
  text-shadow: 0 1px 1px rgba(0,0,0,0.5);
}
.welcome-prequestion {
  display: block;
}
.welcome-question {
  display: inline;
  font-size: large;
  font-weight: 700;
  line-height: 1.2;
}
.welcome-more-link {
  text-transform: uppercase;
  text-decoration: none;
  font-weight: 600;
  white-space: nowrap;
}


/* =User Lists
-------------------------------------------------------------- */

ul.user-list {
  margin-bottom: 10px;
}
.user-list li {
  display: inline;
}
.user-list li a {
  float: left;
  width: 10%;
}
.user-list .avatar {
  border-radius: 0;
  width: 100%;
  height: auto;
}

/* =Media Queries for Responsive Layout
-------------------------------------------------------------- */

@media only screen and (min-width: 320px) {
}

@media only screen and (min-width: 480px) {
}

@media only screen and (min-width: 768px) {
}

@media only screen and (min-width: 1024px) {
}

@media only screen and (min-width: 1300px) {
}

